<resources>
    <string name="app_name">Copacabana</string>
    <string name="titulo">Venga a Copacabana, fundadora</string>
    <string name="titulo2">De pueblos</string>
    <string name="parrafo1">Copacabana es un municipio ubicado al Norte del Valle de Aburrá, a 14 kilómetros de Medellín, capital del Departamento de Antioquia. Desde Medellín se puede llegar a Copacabana por la Autopista Norte en Doble Calzada (Troncal de Occidente) y por la vía a Machado. Ambas vías estan totalmente pavimentadas y en perfecto estado.\n Coonatra es la empresa que presta el servicio de transporte público urbano y intermunicipal. Los buses y colectivos hacia Copacabana salen de la estación Prado del Metro de Medellín. También es posible viajar a través del Sistema Integrado Metrosit con trasbordo desde la estación Niquía (Bello).</string>
    <string name="turisticos">Sitios turísticos</string>
    <string name="bares">Bares</string>
    <string name="atras">Atras</string>
    <string name="hoteles">Hoteles</string>
    <string name="demografia">Info. Demográfica</string>
    <string name="acerca">Acerca de...</string>
    <string name="infoacercade">Esta app hace parte del laboratorio 3 de programación para dispositivos móviles\nEstudiante: Julián Camilo Núñez\nProfesor:Edwin Cubillos</string>
    <string name="infodemografica">Información:\n\nEl Municipio de Copacabana está situado al norte de la ciudad de Medellín, en el Valle de Aburrá, una de las nueve regiones en las que se divide cultural y geográficamente el Departamento de Antioquia.\nLimita al Norte con el municipio de San Pedro, al Oriente con el municipio de Girardota, al Occidente con el municipio de Bello y al Sur con los municipios de Guarne y Medellín.\nTiene una población de 66.665 mil habitantes (Datos del DANE a Junio 30 de 2011), siendo ésta, la sexta aglomeración urbana del Área Metropolitana del Valle de Aburrá que suma un total de 3\'312.165 personas aproximadamente.\nSus principales actividades económicas son: la actividad industrial, las confecciones, la economía informal y la agricultura (principalmente el cultivo de cebolla junca, la naranja y el fique).</string>
    <string name="infohoteles">Información:\n\nHospedaje Brazil\nHabitación sencilla: 15.000 pesos la noche\nTeléfono: 401 4918\nDirección: Carrera 52 # 50 -80 Copaccabana - Antioquia</string>
    <string name="infohoteles2">Finca Vista hermosa\nFin de Semana 500.000 Pesos\nTeléfono 401 4918\nMáximo 25 personas</string>
    <string name="infohoteles3">Finca Villa Raquel\nFin de Semana: 550.000 Pesos\nTeléfono 401 4918\nMáximo 20 personas</string>
    <string name="infobares">Información:\n\nSala 94\t\t Propietario: Giovanni Acevedo zapata.\n\t\t\t\t\t\t Crra. 49 Nº. 51 - 29\n\t\t\t\t\t\t Tel:  274 2403 -300 431 9248\n\nSanto\t\t\t Propietario: Jaian asociados\nCoyote\t\t Autopista Norte/Vereda el Noral\n\t\t\t\t\t\t Telefonos:  401 34 33 / 312 895 86 74\n\nFonda del\t\t Propietario: Esteban Duque\nCaballo\t\t\t Autopista Norte/Vereda el Noral\n\t\t\t\t\t\t\t\t Telefono: 320 686 5018 </string>
    <string name="cruz">Monumento a la Santa Cruz\nCopacabana es llamado por los viajantes aéreos y los que vienen del norte del país, "el pueblito de la cruz". Además el cerro donde está la cruz es utilizado como pista de ciclo montañismo. El Santuario está ubicado en la vereda El Cabuyal y se puede acceder al sitio por la vía principal que conduce a la vereda.</string>
    <string name="sanjuan">Iglesia San Juan de la Tasajera\nUbicada a dos kilómetros de la cabecera municipal, en el barrio San Juan, se destaca por su bella y sobria arquitectura. Fue construida en la década de los 60 en el mismo lugar donde se ofició la primera misa de la iglesia católica en el Valle de Aburrá, el 8 de septiembre de 1541. Destacan su confesionario y las estaciones del viacrucis tallados en madera.</string>
    <string name="ballenas">Parque recreativo Las Ballenas\nUbicado a 3 kilómetros de la cabecera municipal sobre la Autopista Norte. Tiene 16 hectáreas de zonas verdes con senderos y ofrece una gran variedad de atracciones y servicios para toda la familia: piscinas, toboganes, baños turcos, canchas de fútbol, tenis y baloncesto, restaurantes y tiendas.</string>


</resources>
