<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hoteles"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">


            <ImageView
                android:layout_width="380dp"
                android:layout_height="350dp"
                android:src="@drawable/hotel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infohoteles"/>

            <ImageView
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:src="@drawable/hotelsencillo"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infohoteles2"/>

            <ImageView
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:src="@drawable/hotelfinca1"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infohoteles3"/>

            <ImageView
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:src="@drawable/hotelfinca2"
                android:layout_gravity="center"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/atras"
            android:id="@+id/atras3"/>


    </LinearLayout>
</ScrollView>